# assistant

./: .gitignore  alembic.ini  main.py  pyproject.toml  sample.models.toml
alembic/: env.py
alembic/versions/: 213ccf2c9aa1_add_chat_history_and_adjust_user_fiedlds.py  35109db0d83e_.py
scripts/: ws_client.py
src/: server.py
src/api/: __init__.py  auth.py  llm.py  schemas.py  utils.py
src/api/middleware/: session.py
src/core/: llm_models.py  logging.py
src/db/: utils.py
src/db/models/: users.py
src/models/: __init__.py  conversations.py  users.py
tests/: conftest.py  test_auth.py
tests/fixtures/: user.py
